--- a/index.css
+++ b/index.css
@@ -7,5 +7,6 @@ padding: 10px;}
 @media (max-width: 768px) {
       .columns {
         display: flex;
+        text-size-adjust: 5vw;
       }
     }
