--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ padding: 10px;}
 }
 @media (max-width: 768px) {
       .columns {
-        display: flex;
-        text-size-adjust: 5vw;
+        display: none;
+        text-size-adjust: 1vw;
       }
     }
